## Process this file with automake to produce Makefile.in -*-Makefile-*-
EXTRA_DIST = lib-ld.m4 lib-link.m4 lib-prefix.m4  					\
c-bs-a.m4					\
codeset.m4					\
dmalloc.m4					\
error.m4					\
gettext.m4					\
glibc21.m4					\
iconv.m4					\
isc-posix.m4					\
lcmessage.m4					\
malloc.m4					\
mbrtowc.m4					\
mbstate_t.m4					\
prereq.m4					\
progtest.m4					\
realloc.m4					\
strerror_r.m4					\
warning.m4
