## Process this file with automake to produce Makefile.in -*-Makefile-*-
EXTRA_DIST = \
  alloca.m4 dirname.m4 dmalloc.m4 dos.m4 error.m4 getopt.m4 hash.m4 \
  m4.m4 malloc.m4 \
  mbrtowc.m4 mbswidth.m4 memchr.m4 memcmp.m4 memrchr.m4 \
  obstack.m4 onceonly.m4 \
  prereq.m4 quote.m4 quotearg.m4 \
  realloc.m4 stdbool.m4 \
  stpcpy.m4 strnlen.m4 strtol.m4 strtoul.m4 \
  subpipe.m4 timevar.m4 unlocked-io.m4 warning.m4 xalloc.m4 \
  gettext.m4 iconv.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 progtest.m4 \
  codeset.m4 glibc21.m4 intdiv0.m4 inttypes-pri.m4 inttypes.m4 inttypes_h.m4 \
  isc-posix.m4 lcmessage.m4 nls.m4 po.m4 stdint_h.m4 uintmax_t.m4 ulonglong.m4
